--- a/src/view/SportBets.fxml
+++ b/src/view/SportBets.fxml
@@ -5,9 +5,15 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0" prefWidth="798.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="240.0" layoutY="153.0" text="Label" />
+      <Label layoutX="605.0" layoutY="6.0" text="Current monetization:" />
+      <Label layoutX="728.0" layoutY="6.0" text="0€" />
+      <Pane layoutX="5.0" layoutY="2.0" prefHeight="447.0" prefWidth="187.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Button layoutY="147.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="187.0" text="Button" />
+      <Button layoutY="2.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="187.0" text="Button" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Button layoutY="51.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="187.0" text="Button" />
+      <Button layoutY="102.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="187.0" text="Button" />
+      <Button layoutY="420.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="92.0" text="Button" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" />
    </children>
 </AnchorPane>
