--- a/src/view/SportBets.fxml
+++ b/src/view/SportBets.fxml
@@ -13,22 +13,22 @@
    <children>
       <Pane layoutY="-3.0" prefHeight="447.0" prefWidth="187.0" styleClass="leftBar" stylesheets="@../../bin/view/Login.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="611.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button layoutX="4.0" layoutY="62.0" mnemonicParsing="false" onAction="#clickInvestments" prefHeight="51.0" prefWidth="187.0" style="-fx-background-color: transparent;" text="Investments" textFill="WHITE">
+            <Button layoutX="4.0" layoutY="62.0" mnemonicParsing="false" onAction="#onClickInvest" prefHeight="51.0" prefWidth="187.0" style="-fx-background-color: transparent;" text="Investments" textFill="WHITE">
                <font>
                   <Font size="21.0" />
                </font>
             </Button>
-            <Button layoutY="113.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="187.0" style="-fx-background-color: transparent;" text="My Profile" textFill="WHITE">
+            <Button layoutY="113.0" mnemonicParsing="false" onAction="#onClickMyProfile" prefHeight="51.0" prefWidth="187.0" style="-fx-background-color: transparent;" text="My Profile" textFill="WHITE">
                <font>
                   <Font size="21.0" />
                </font>
             </Button>
-            <Button layoutX="-1.0" layoutY="169.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="187.0" style="-fx-background-color: transparent;" text="Other Users" textFill="WHITE">
+            <Button layoutX="-1.0" layoutY="169.0" mnemonicParsing="false" onAction="#onClickOtherUsers" prefHeight="51.0" prefWidth="187.0" style="-fx-background-color: transparent;" text="Other Users" textFill="WHITE">
                <font>
                   <Font size="21.0" />
                </font>
             </Button>
-            <Button layoutX="14.0" layoutY="407.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="66.0" style="-fx-background-color: transparent;" text="Log Out" textFill="WHITE" />
+            <Button layoutX="14.0" layoutY="407.0" mnemonicParsing="false" onAction="#onClickLogOut" prefHeight="26.0" prefWidth="66.0" style="-fx-background-color: transparent;" text="Log Out" textFill="WHITE" />
          </children>
       </Pane>
       <Line endX="520.0" layoutX="298.0" layoutY="45.0" startX="-100.0" strokeWidth="0.5" />
