--- a/src/view/Investments.fxml
+++ b/src/view/Investments.fxml
@@ -91,23 +91,29 @@
             <Font name="System Italic" size="28.0" />
          </font>
       </Button>
-      <Label layoutX="217.0" layoutY="86.0" prefHeight="17.0" prefWidth="115.0" text="Actual price: 23€" />
+      <Label layoutX="217.0" layoutY="86.0" prefHeight="17.0" prefWidth="76.0" text="Actual price: " />
       <Label layoutX="218.0" layoutY="113.0" prefHeight="17.0" prefWidth="121.0" text="Ends: Sat. 16 Dec." />
       <Label layoutX="217.0" layoutY="197.0" prefHeight="17.0" prefWidth="82.0" text="Gold per kg." />
-      <Label layoutX="217.0" layoutY="224.0" prefHeight="17.0" prefWidth="115.0" text="Actual price: 23€" />
       <Label layoutX="218.0" layoutY="251.0" prefHeight="17.0" prefWidth="121.0" text="Ends: Sat. 16 Dec." />
       <Label layoutX="212.0" layoutY="317.0" prefHeight="17.0" prefWidth="82.0" text="Gold per kg." />
-      <Label layoutX="212.0" layoutY="344.0" prefHeight="17.0" prefWidth="129.0" text="Actual price: 23€" />
       <Label layoutX="213.0" layoutY="371.0" prefHeight="17.0" prefWidth="129.0" text="Ends: Sat. 16 Dec." />
       <Label layoutX="520.0" layoutY="60.0" prefHeight="17.0" prefWidth="82.0" text="Gold per kg." />
-      <Label layoutX="520.0" layoutY="86.0" prefHeight="17.0" prefWidth="115.0" text="Actual price: 23€" />
-      <Label layoutX="520.0" layoutY="122.0" prefHeight="17.0" prefWidth="121.0" text="Ends: Sat. 16 Dec." />
+      <Label layoutX="520.0" layoutY="113.0" prefHeight="17.0" prefWidth="121.0" text="Ends: Sat. 16 Dec." />
       <Label layoutX="515.0" layoutY="206.0" prefHeight="17.0" prefWidth="82.0" text="Gold per kg." />
-      <Label layoutX="515.0" layoutY="224.0" prefHeight="17.0" prefWidth="121.0" text="Actual price: 23€" />
       <Label layoutX="511.0" layoutY="251.0" prefHeight="17.0" prefWidth="121.0" text="Ends: Sat. 16 Dec." />
       <Label layoutX="520.0" layoutY="317.0" prefHeight="17.0" prefWidth="82.0" text="Gold per kg." />
-      <Label layoutX="520.0" layoutY="344.0" prefHeight="17.0" prefWidth="115.0" text="Actual price: 23€" />
       <Label layoutX="520.0" layoutY="371.0" prefHeight="17.0" prefWidth="121.0" text="Ends: Sat. 16 Dec." />
       <Line endX="520.0" layoutX="285.0" layoutY="42.0" startX="-100.0" strokeWidth="0.5" />
+      <Label layoutX="220.0" layoutY="225.0" prefHeight="17.0" prefWidth="76.0" text="Actual price: " />
+      <Label layoutX="212.0" layoutY="345.0" prefHeight="17.0" prefWidth="76.0" text="Actual price: " />
+      <Label layoutX="518.0" layoutY="86.0" prefHeight="17.0" prefWidth="76.0" text="Actual price: " />
+      <Label layoutX="511.0" layoutY="225.0" prefHeight="17.0" prefWidth="76.0" text="Actual price: " />
+      <Label layoutX="518.0" layoutY="345.0" prefHeight="17.0" prefWidth="76.0" text="Actual price: " />
+      <Label fx:id="label1" layoutX="299.0" layoutY="86.0" text="Label" />
+      <Label fx:id="label3" layoutX="299.0" layoutY="225.0" text="Label" />
+      <Label fx:id="label5" layoutX="299.0" layoutY="345.0" text="Label" />
+      <Label fx:id="label2" layoutX="602.0" layoutY="86.0" text="Label" />
+      <Label fx:id="label4" layoutX="602.0" layoutY="225.0" text="Label" />
+      <Label fx:id="label6dr" layoutX="602.0" layoutY="345.0" text="Label" />
    </children>
 </AnchorPane>
